--- a/templates/Model_WebPage.html
+++ b/templates/Model_WebPage.html
@@ -10,7 +10,7 @@
 	<div id="form_div">
 		<h2>Submit picture</h2>
 		<br>
-		<form action="/classify_image" method="POST" enctype="multipart/form-data" id=form>
+		<form action="{{ url_for('classify_image') }}" method="POST" enctype="multipart/form-data" id=form>
 			<label>Select a file: </label>
 			<input type="file" name="image_to_classify" multiple/>
 			<br>
