--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@ html, body {
 }
 
 #form_div {
+    margin-top: 10px;
     background-color:#b3b3b3;
     float: left;
     width: 50%;
@@ -32,6 +33,7 @@ html, body {
 }
 
 #results_div {
+    margin-top: 10px;
     background-color: #b3b3b3;
     float: right;
     text-align: center;
@@ -56,6 +58,20 @@ html, body {
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
+}
+
+.contacts {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    /* display: block; */
+    z-index: 1;
+    /* background-color: blue; */
+    /* margin-left: 5%; */
+    /* top: 0%; */
+    /* position: absolute; */
+    line-height: 5px;
+    /* font-size: 13px; */
 }
 
 input[type="submit"] {
