Update to acknoledgments.

--- a/templates/Model_WebPage.html
+++ b/templates/Model_WebPage.html
@@ -103,7 +103,7 @@
 		<br>
 		<p id="confidence_paragraph">
 			Also, I want to acknoledge the work of all my very thoughtful and encouraging beta testers for the
-		iOS version of Lepilens, specially Pedro Gomes and Pedro Carrasco.</p>
+		iOS version of Lepilens, specially Pedro Gomes, Pedro Carrasco and Ken Kocienda.</p>
 		<br>
 		<p id="confidence_paragraph">
 			In order to build this app and train the Machine Learning model that performs the classification
