Fixed euroButterflies link

--- a/templates/Model_WebPage.html
+++ b/templates/Model_WebPage.html
@@ -115,7 +115,7 @@
 			<li><b><a href="http://jasius.hu/lepidopterology/lepkek.html">Butterflies in Hungary</a></b> by Ádám Gór</li>
 			<li><b><a href="http://pyrgus.de">Lepidoptera and their ecology</a></b> by Wolfgang Wagner</li>
 			<li><b><a href="http://www.lepiforum.de">Lepiforum</a></b> by Erwin Rennwald and Jürgen Rodeland</li>
-			<li><b><a href="www.eurobutterflies.com/">euroButterflies</a></b> by Matt Rowlings</li>
+			<li><b><a href="https://www.eurobutterflies.com/">euroButterflies</a></b> by Matt Rowlings</li>
 			<li><b><a href="https://www.butterfliesoffrance.com">Butterflies of France</a></b> by Roger Gibbons</li>
 			<li><b><a href="https://ukbutterflies.co.uk">UK Butterflies</a></b> by Peter Eeles</li>
 			
